--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "promisejs.org",
-  "version": "1.0.0",
-  "versionify": "1.0.0",
+  "version": "1.0.1",
+  "versionify": "1.0.1",
   "private": true,
   "description": "A website dedicated to promises in JavaScript",
   "dependencies": {
     "transform": "~1.0.2",
     "less": "~1.4.1",
     "jade": "~0.34.1",
-    "browserify-middleware": "~1.14.1",
     "express": "~3.3.4",
     "highlight.js": "~7.3.0",
     "browserify": "~2.25.1",
     "promise": "3.2.0",
-    "q": "0.9.6"
+    "q": "0.9.6",
+    "when": "2.2.1",
+    "vow": "0.3.9",
+    "rsvp": "2.0.1"
   },
   "devDependencies": {
     "mocha": "*",
