Begin redesign and update

--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "private": true,
   "description": "A website dedicated to promises in JavaScript",
   "dependencies": {
+    "browserify": "~3.38.1",
+    "express": "~3.5.1",
+    "highlight.js": "~8.0.0",
+    "less": "~1.7.0",
     "transform": "~1.1.2",
-    "less": "~1.5.0",
-    "jade": "~0.35.0",
-    "express": "~3.4.2",
-    "highlight.js": "~7.3.0",
-    "browserify": "~2.34.3",
-    "promise": "3.2.0",
-    "q": "0.9.7",
-    "when": "2.5.1",
-    "vow": "0.3.10",
-    "rsvp": "2.0.4"
+    "promise": "4.0.0",
+    "q": "1.0.1",
+    "rsvp": "3.0.6",
+    "vow": "0.4.2",
+    "when": "3.0.1",
+    "jquery": "^2.1.0",
+    "twbs": "0.0.6",
+    "browserify-middleware": "^2.5.0",
+    "booting-nav": "^1.0.1",
+    "inconsolata": "0.0.2",
+    "less-file": "0.0.8"
   },
   "devDependencies": {
     "mocha": "*",
