--- a/package.json
+++ b/package.json
@@ -5,20 +5,22 @@
   "private": true,
   "description": "A website dedicated to promises in JavaScript",
   "dependencies": {
-    "browserify": "~3.44.0",
-    "express": "~4.0.0",
-    "highlight.js": "~8.0.0",
-    "less": "~1.7.0",
-    "transform": "~1.1.2",
-    "promise": "4.0.0",
-    "jquery": "^2.1.0",
-    "twbs": "0.0.6",
-    "browserify-middleware": "^2.5.0",
     "booting-nav": "^1.0.1",
+    "browserify": "~5.9.1",
+    "browserify-middleware": "^3.0.1",
+    "convert-source-map": "^0.4.1",
+    "express": "~4.7.2",
+    "highlight.js": "~8.1.0",
     "inconsolata": "0.0.2",
-    "less-file": "0.0.8",
+    "jade": "~1.5.0",
+    "jquery": "^2.1.1",
+    "less": "~1.7.4",
+    "less-file": "0.0.9",
+    "promise": "5.0.0",
     "static-favicon": "^1.0.2",
-    "jade": "~1.3.1"
+    "transform": "~1.1.2",
+    "twbs": "0.0.6",
+    "uglify-js": "^2.4.15"
   },
   "devDependencies": {
     "mocha": "*",
