--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "booting-nav": "^1.0.1",
     "browserify": "~5.9.1",
     "browserify-middleware": "^3.0.1",
+    "clean-css": "^2.2.16",
     "convert-source-map": "^0.4.1",
     "express": "~4.7.2",
     "highlight.js": "~8.1.0",
