--- a/package.json
+++ b/package.json
@@ -6,19 +6,15 @@
   "description": "A website dedicated to promises in JavaScript",
   "dependencies": {
     "booting-nav": "^1.0.1",
-    "browserify": "~5.9.1",
-    "browserify-middleware": "^3.0.1",
+    "browserify": "^8.1.3",
     "convert-source-map": "^0.4.1",
-    "express": "~4.7.2",
-    "highlight.js": "~8.1.0",
-    "inconsolata": "0.0.2",
-    "jade": "~1.5.0",
-    "jquery": "^2.1.1",
+    "express": "~4.11.2",
+    "highlight.js": "~8.4.0",
+    "jade": "~1.9.2",
     "less": "~1.7.4",
     "less-file": "0.0.9",
     "promise": "6.1.0",
     "static-favicon": "^1.0.2",
-    "transform": "~1.1.2",
     "twbs": "0.0.6",
     "uglify-js": "^2.4.15"
   },
