--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
   "name": "promisejs.org",
-  "version": "3.0.17",
-  "versionify": "3.0.17",
+  "version": "3.0.18",
+  "versionify": "3.0.18",
   "private": true,
   "description": "A website dedicated to promises in JavaScript",
   "dependencies": {
     "booting-nav": "^1.0.1",
-    "browserify": "^8.1.3",
+    "browserify": "^11.2.0",
     "convert-source-map": "^0.4.1",
     "express": "~4.11.2",
     "highlight.js": "~8.4.0",
-    "jade": "~1.9.2",
+    "jade": "^1.11.0",
     "less": "~1.7.4",
     "less-file": "0.0.9",
-    "promise": "7.0.1",
+    "promise": "7.0.4",
     "static-favicon": "^1.0.2",
     "twbs": "0.0.6",
-    "uglify-js": "^2.4.15"
+    "uglify-js": "^2.4.24"
   },
   "devDependencies": {
     "mandate": "*",
     "mocha": "*",
-    "rimraf": "*",
+    "rimraf": "^2.4.3",
     "stop": "^3.0.1",
     "versionify": "*"
   },
