--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "promisejs.org",
-  "version": "3.0.18",
-  "versionify": "3.0.18",
+  "version": "3.0.19",
+  "versionify": "3.0.19",
   "private": true,
   "description": "A website dedicated to promises in JavaScript",
   "dependencies": {
@@ -13,6 +13,8 @@
     "jade": "^1.11.0",
     "less": "~1.7.4",
     "less-file": "0.0.9",
+    "markdown-it": "^5.1.0",
+    "markdown-it-regexp": "^0.4.0",
     "promise": "7.0.4",
     "static-favicon": "^1.0.2",
     "twbs": "0.0.6",
